Add li to nav and Add adjust media query

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 </div>
 
-<main class="ContentPreorder">
+<main class="ContentContact">
 	<h1>Have any questions? Contact Us</h1>
 	
 	<form action="receiveOrder.php" method="POST" enctype="multipart/form-data" class="contactForm">
