--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main class="ContentContact">
 	<h1>Have any questions? Contact Us</h1>
 	
-	<form action="receiveOrder.php" method="POST" enctype="multipart/form-data" class="contactForm">
+	<form action="saveToDB.php" method="POST" enctype="multipart/form-data" class="contactForm">
 	
 		<fieldset>
 			<legend>Personal Information</legend>
