--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	
 		<fieldset>
 			<legend>Personal Information</legend>
-			<label><span>Name:</span><input name="name" type="text" placeholder="Your Name..." pattern="[a-zA-Z -.]{3,999}"  class="userInput" required></label>
-			<label><span>Phone:</span><input name="phone" type="tel" placeholder="555-333-1234" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="userInput"></label>
-			<label><span>Email:</span><input name="email" type="email" placeholder="yourname@myemail.com"  class="userInput" required></label>
+			<label><span>Name:</span><input name="name" type="text" placeholder="Your Name..." pattern="[a-zA-Z -.]{3,999}"  class="userInput" ></label>
+			<label><span>Phone:</span><input name="phone" type="tel" placeholder="5553331234" pattern="[0-9]{10}" class="userInput"></label>
+			<label><span>Email:</span><input name="email" type="email" placeholder="yourname@myemail.com"  class="userInput" ></label>
 			
 			<label><span>Best way to contact you?</span>
 			<select name="contactDropdown" class="contactOptions">
@@ -56,7 +56,7 @@
 		</fieldset>
 			
 	
-	<input class="submitbutton" name="submitbutton" value="Place Order" type="submit">
+	<input class="submitbutton" name="submitbutton" value="Send Message" type="submit">
 	<input type="hidden" value="thanks.html" name="redirect">
 	</form>
 </main>
