Add required attributes back

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	
 		<fieldset>
 			<legend>Personal Information</legend>
-			<label><span>Name:</span><input name="name" type="text" placeholder="Your Name..." pattern="[a-zA-Z -.]{3,999}"  class="userInput" ></label>
+			<label><span>Name:</span><input name="name" type="text" placeholder="Your Name..." pattern="[a-zA-Z -.]{3,999}"  class="userInput" required></label>
 			<label><span>Phone:</span><input name="phone" type="tel" placeholder="5553331234" pattern="[0-9]{10}" class="userInput"></label>
-			<label><span>Email:</span><input name="email" type="email" placeholder="yourname@myemail.com"  class="userInput" ></label>
+			<label><span>Email:</span><input name="email" type="email" placeholder="yourname@myemail.com"  class="userInput" required></label>
 			
 			<label><span>Best way to contact you?</span>
 			<select name="contactDropdown" class="contactOptions">
