Add styles to textarea and dropdown and increase height of header

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 				<option>Email</option>
 			</select></label>
 			
-			<span>Message:</span>
-			<textarea class="message" name="contactMessage"></textarea>
+			<label class="messageLabel"><span>Message:</span>
+			<textarea class="message" name="contactMessage"></textarea></label>
+			
 		</fieldset>
 			
 	
